<resources>
    <string name="app_name">JalIhara</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username_required">Username must be filled</string>
    <string name="password_required">Password must be filled</string>
    <string name="username_length">Username length must be more than 5</string>
    <string name="password_length">Password length must be more than 8</string>
    <string name="app_logo_description">JalIhara Logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    homepage-->
    <string name="trending">Trending</string>
    <string name="recommend">Recommended for you</string>
    <string name="offer">Best Offers</string>

    <string name="menu_item1">Home</string>
    <string name="menu_item2">About Us</string>
    <string name="menu_item3">Ticket</string>
    <string name="menu_item4">Log out</string>


</resources>