<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jalIhara.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/navbar_icon"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sub_item1"
                android:title="@string/menu_item1"
                android:icon="@drawable/navbar_home_icon"
                android:orderInCategory="100"
                />
            <item
                android:id="@+id/sub_item2"
                android:title="@string/menu_item2"
                android:icon="@drawable/navbar_info_icon"
                android:orderInCategory="100"
                />
            <item
                android:id="@+id/sub_item3"
                android:title="@string/menu_item3"
                android:icon="@drawable/navbar_ticket_icon"
                android:orderInCategory="100"
                />
            <item
                android:id="@+id/sub_item4"
                android:title="@string/menu_item4"
                android:icon="@drawable/navbar_logout_icon"
                android:orderInCategory="100"
                />
        </menu>
    </item>



</menu>